fastapi-demo/test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-demo
spec:
  selector:
    matchLabels:
      app: fastapi-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: fastapi-demo
      annotations:
        instrumentation.opentelemetry.io/inject-python: "default/my-instrumentation"
    spec:
      containers:
      - name: fastapi-demo
        image: registry.localhost:5000/fastapidemo:v0.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-demo
  name: fastapi-demo
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: fastapi-demo
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "ca-local-dev"
spec:
  tls:
    - hosts:
        - fastapidemo.${CLUSTER_NAME}.${LOCAL_DEV_DNS_SUFFIX}
      secretName: fastapidemo-tls
  rules:
  - host: fastapidemo.${CLUSTER_NAME}.${LOCAL_DEV_DNS_SUFFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-demo
            port:
              number: 80
