fastapi-demo/test_deploy_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: fastapidemo.k3d.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-demo
            port:
              number: 80
